Fix link color and alignment in notice on mobile
Reported in https://phabricator.wikimedia.org/T358296#9589773

Root cause is the mobile skin adding a bunch of custom rules for
.mw-notification to switch it to a white-on-black color scheme.
Eventually all notifications should be aligned to Codex design
standards, including on mobile (T359084).

Bug: T358296
Bug: T359000

--- a/resources/ext.parsermigration.notice.less
+++ b/resources/ext.parsermigration.notice.less
@@ -6,7 +6,16 @@
                              @param-fill-color: @color-subtle );
     }
 
+    /* Force the color scheme to match Codex; there are some other random
+     * colors set for mobile notifications which we need to override.
+     * https://phabricator.wikimedia.org/T358296#9589773
+     */
+    color: @color-notice;
     background-color: @background-color-notice-subtle;
+    a { .cdx-mixin-link-base(); }
+    /* Same for text alignment: Codex specifies left-justified, mobile
+     * overrides to centered. */
+    text-align: left;
 
     /* Codex defaults inline messages to bold for some reason. */
     .cdx-message--inline { font-weight: @font-weight-normal; }
